// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepByStepSection renders correctly with different style options renders correctly with MediaMarkt grey styling 1`] = `
.c6 {
  margin: 0;
  color: #000000;
  font-size: 30px;
  line-height: 28px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

.c7 {
  color: #000000;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c14 {
  margin: 0;
  color: #000000;
  font-size: 26px;
  line-height: 28px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

.c17 {
  color: #000000;
  font-size: 18px;
  line-height: 28px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  overflow: hidden;
  max-height: calc(28px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c20 {
  color: #000000;
  font-size: 14px;
  line-height: 20px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 svg {
  width: 25px;
  height: 25px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #000000;
}

.c12 svg g,
.c12 svg p {
  fill: #000000;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  display: none;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  width: calc(100% - 16px);
}

.c1 {
  box-sizing: border-box;
  margin: 0 auto;
  max-width: 1472px;
  padding: 0 16px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  margin: 0;
  margin-bottom: 0;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #000000;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c18::after {
  content: '';
  position: absolute;
  display: none;
  bottom: -2px;
  height: 1px;
  background-color: #000000;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c18:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c19 {
  margin-left: 0px;
  margin-right: 4px;
}

.c19 svg {
  height: 16px;
  width: 16px;
}

.c21 {
  display: block;
  color: #000000;
}

.c8 {
  display: block;
  width: 100%;
  height: 32px;
}

.c13 {
  width: 5rem;
  height: 5rem;
  line-height: 5rem;
  border-radius: 50%;
  border: 2px solid black;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  text-align: center;
}

.c15 {
  display: inline-block;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  vertical-align: -0.1rem;
  margin-left: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 350px;
  -webkit-flex-basis: 47.5%;
  -ms-flex-preferred-size: 47.5%;
  flex-basis: 47.5%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  width: 95%;
  max-width: 25rem;
  padding-top: 0;
  padding-bottom: 24px;
}

.c16 p {
  margin-bottom: 0;
  width: 100%;
}

.c16 a {
  margin-top: 8px;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 350px;
  -webkit-flex-basis: 5%;
  -ms-flex-preferred-size: 5%;
  flex-basis: 5%;
}

.c23 {
  width: 4rem;
  height: 4rem;
  margin: 0 auto 24px auto;
  -webkit-transform: translateX(-2rem) rotate(90deg);
  -ms-transform: translateX(-2rem) rotate(90deg);
  transform: translateX(-2rem) rotate(90deg);
  border-top: 1px solid black;
}

.c0 {
  position: relative;
  overflow: hidden;
  background-color: #FAFAFA;
  margin: 56px 0;
}

.c0:before {
  content: '';
  display: block;
  position: absolute;
  width: 40rem;
  height: 40rem;
  top: 0;
  left: 50%;
  background: rgba(0,0,0,0.1);
  border-radius: 100px;
  -webkit-transform: translate(-20rem,-0.5rem) rotate(-45deg);
  -ms-transform: translate(-20rem,-0.5rem) rotate(-45deg);
  transform: translate(-20rem,-0.5rem) rotate(-45deg);
}

.c5 {
  position: relative;
  padding: 56px 0;
}

.c10 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

@supports (display:grid) {
  .c3 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c3 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    width: calc(12.5% - 16px);
  }
}

@media (min-width:752px) {
  .c3 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    width: calc(12.5% - 24px);
  }
}

@media (min-width:1008px) {
  .c3 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(8.33333% - 24px);
  }
}

@media (min-width:1232px) {
  .c3 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(8.33333% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@supports (display:grid) {
  .c4 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@supports (display:grid) {
  .c4 {
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c4 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    width: calc(75% - 16px);
  }
}

@media (min-width:752px) {
  .c4 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    width: calc(75% - 24px);
  }
}

@media (min-width:1008px) {
  .c4 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(83.33333% - 24px);
  }
}

@media (min-width:1232px) {
  .c4 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(83.33333% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@media (min-width:512px) {
  .c1 {
    padding: 0 24px;
  }
}

@media (min-width:752px) {
  .c1 {
    padding: 0 32px;
  }
}

@media (min-width:1008px) {
  .c1 {
    padding: 0 48px;
  }
}

@media (min-width:1232px) {
  .c1 {
    padding: 0 64px;
  }
}

@supports (display:grid) {
  .c2 {
    display: grid;
    grid-gap: 16px;
    grid-template-columns: repeat(4,minmax(0,1fr));
  }
}

@media (min-width:512px) {

}

@media (min-width:752px) {

}

@media (min-width:1008px) {

}

@media (min-width:1232px) {

}

@media (min-width:752px) {
  .c8 {
    height: 40px;
  }
}

@media (max-width:752px) {
  .c11 {
    -webkit-flex-basis: 0%;
    -ms-flex-preferred-size: 0%;
    flex-basis: 0%;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
    width: 100%;
  }
}

@media (min-width:752px) {
  .c16 {
    padding-bottom: 40px;
  }
}

@media (max-width:752px) {
  .c22 {
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
  }
}

@media (min-width:752px) {
  .c22 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:752px) {
  .c23 {
    width: 100%;
    margin: 0;
  }
}

@media (min-width:752px) {
  .c23 {
    -webkit-transform: translateY(2.5rem) scaleX(6);
    -ms-transform: translateY(2.5rem) scaleX(6);
    transform: translateY(2.5rem) scaleX(6);
  }
}

@media (min-width:1008px) {
  .c23 {
    -webkit-transform: translateY(2.5rem) scaleX(5);
    -ms-transform: translateY(2.5rem) scaleX(5);
    transform: translateY(2.5rem) scaleX(5);
  }
}

@media (min-width:1232px) {
  .c23 {
    -webkit-transform: translateY(2.5rem) scaleX(4);
    -ms-transform: translateY(2.5rem) scaleX(4);
    transform: translateY(2.5rem) scaleX(4);
  }
}

@media (min-width:752px) {

}

@media (min-width:752px) {

}

@media (min-width:1008px) {

}

@media (min-width:1232px) {

}

@media (min-width:752px) {
  .c0:before {
    width: 55rem;
    height: 55rem;
    -webkit-transform: translate(-43rem,1rem) rotate(-45deg);
    -ms-transform: translate(-43rem,1rem) rotate(-45deg);
    transform: translate(-43rem,1rem) rotate(-45deg);
  }
}

@media (min-width:1008px) {
  .c0:before {
    -webkit-transform: translate(-47rem,-1rem) rotate(-45deg);
    -ms-transform: translate(-47rem,-1rem) rotate(-45deg);
    transform: translate(-47rem,-1rem) rotate(-45deg);
  }
}

@media (min-width:1232px) {
  .c0:before {
    -webkit-transform: translate(-55rem,-1rem) rotate(-45deg);
    -ms-transform: translate(-55rem,-1rem) rotate(-45deg);
    transform: translate(-55rem,-1rem) rotate(-45deg);
  }
}

@media (min-width:752px) {

}

@media (min-width:1008px) {

}

@media (min-width:1232px) {

}

@media (min-width:752px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<section
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <h2
            aria-label="Town Musicians of Bremen."
            className="c6"
            color="black"
            fontFamily="default"
            fontSize="xxl"
            spacing="base"
          >
            Town Musicians of Bremen.
          </h2>
          <p
            className="c7"
            color="black"
            fontSize="sm"
          >
            In the story, a donkey, a dog, a cat, and a rooster leave their homes and set out together.
          </p>
          <div
            className="c8"
            direction="horizontal"
            size="xl"
          />
          <div
            className="c9 c10"
            display="flex"
          >
            <div
              className="c11"
            >
              <div
                className="c12"
                color="black"
              >
                <div
                  className="c13"
                  color="black"
                >
                  <span
                    className="c14 c15"
                    color="black"
                    fontFamily="featured"
                    fontSize="xl"
                    spacing="base"
                  >
                    01
                  </span>
                </div>
              </div>
              <div
                className="c16"
              >
                <p
                  className="c17"
                  color="black"
                  fontSize="md"
                >
                  they see a lighted cottage...
                </p>
                <a
                  className="c18"
                  color="black"
                  href="https://en.wikipedia.org/wiki/Bremen"
                  target="_self"
                >
                  <span
                    className="c19"
                    color="black"
                  >
                    <div
                      className="c12"
                      color="black"
                    >
                      <svg
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                        />
                      </svg>
                    </div>
                  </span>
                  <span
                    className="c20 c21"
                    color="black"
                    fontSize="xs"
                  >
                    On the way to Bremen
                  </span>
                </a>
              </div>
            </div>
            <div
              className="c22"
            >
              <div
                className="c23"
                color="black"
              />
            </div>
            <div
              className="c11"
            >
              <div
                className="c12"
                color="black"
              >
                <div
                  className="c13"
                  color="black"
                >
                  <span
                    className="c14 c15"
                    color="black"
                    fontFamily="featured"
                    fontSize="xl"
                    spacing="base"
                  >
                    02
                  </span>
                </div>
              </div>
              <div
                className="c16"
              >
                <p
                  className="c17"
                  color="black"
                  fontSize="md"
                >
                  they look inside and see four robbers
                </p>
                <a
                  className="c18"
                  color="black"
                  href="https://en.wikipedia.org/wiki/Bremen"
                  target="_self"
                >
                  <span
                    className="c19"
                    color="black"
                  >
                    <div
                      className="c12"
                      color="black"
                    >
                      <svg
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                        />
                      </svg>
                    </div>
                  </span>
                  <span
                    className="c20 c21"
                    color="black"
                    fontSize="xs"
                  >
                    Enjoying their ill-gotten gains
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`StepByStepSection renders correctly with different style options renders correctly with MediaMarkt primary styling 1`] = `
.c6 {
  margin: 0;
  color: #FFFFFF;
  font-size: 30px;
  line-height: 28px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

.c7 {
  color: #FFFFFF;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c14 {
  margin: 0;
  color: #FFFFFF;
  font-size: 26px;
  line-height: 28px;
  font-family: OswaldBold,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

.c17 {
  color: #FFFFFF;
  font-size: 18px;
  line-height: 28px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  overflow: hidden;
  max-height: calc(28px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c20 {
  color: #FFFFFF;
  font-size: 14px;
  line-height: 20px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 svg {
  width: 25px;
  height: 25px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #FFFFFF;
}

.c12 svg g,
.c12 svg p {
  fill: #FFFFFF;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  display: none;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  width: calc(100% - 16px);
}

.c1 {
  box-sizing: border-box;
  margin: 0 auto;
  max-width: 1472px;
  padding: 0 16px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  margin: 0;
  margin-bottom: 0;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #FFFFFF;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c18::after {
  content: '';
  position: absolute;
  display: none;
  bottom: -2px;
  height: 1px;
  background-color: #FFFFFF;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c18:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c19 {
  margin-left: 0px;
  margin-right: 4px;
}

.c19 svg {
  height: 16px;
  width: 16px;
}

.c21 {
  display: block;
  color: #FFFFFF;
}

.c8 {
  display: block;
  width: 100%;
  height: 32px;
}

.c13 {
  width: 5rem;
  height: 5rem;
  line-height: 5rem;
  border-radius: 50%;
  border: 2px solid white;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  text-align: center;
}

.c15 {
  display: inline-block;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  vertical-align: -0.1rem;
  margin-left: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 350px;
  -webkit-flex-basis: 47.5%;
  -ms-flex-preferred-size: 47.5%;
  flex-basis: 47.5%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  width: 95%;
  max-width: 25rem;
  padding-top: 0;
  padding-bottom: 24px;
}

.c16 p {
  margin-bottom: 0;
  width: 100%;
}

.c16 a {
  margin-top: 8px;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 350px;
  -webkit-flex-basis: 5%;
  -ms-flex-preferred-size: 5%;
  flex-basis: 5%;
}

.c23 {
  width: 4rem;
  height: 4rem;
  margin: 0 auto 24px auto;
  -webkit-transform: translateX(-2rem) rotate(90deg);
  -ms-transform: translateX(-2rem) rotate(90deg);
  transform: translateX(-2rem) rotate(90deg);
  border-top: 1px solid white;
}

.c0 {
  position: relative;
  overflow: hidden;
  background-color: #00C8DC;
  margin: 56px 0;
}

.c0:before {
  content: '';
  display: block;
  position: absolute;
  width: 40rem;
  height: 40rem;
  top: 0;
  left: 50%;
  background: rgba(0,0,0,0.1);
  border-radius: 100px;
  -webkit-transform: translate(-20rem,-0.5rem) rotate(-45deg);
  -ms-transform: translate(-20rem,-0.5rem) rotate(-45deg);
  transform: translate(-20rem,-0.5rem) rotate(-45deg);
}

.c5 {
  position: relative;
  padding: 56px 0;
}

.c10 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

@supports (display:grid) {
  .c3 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c3 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    width: calc(12.5% - 16px);
  }
}

@media (min-width:752px) {
  .c3 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    width: calc(12.5% - 24px);
  }
}

@media (min-width:1008px) {
  .c3 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(8.33333% - 24px);
  }
}

@media (min-width:1232px) {
  .c3 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(8.33333% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@supports (display:grid) {
  .c4 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@supports (display:grid) {
  .c4 {
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c4 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    width: calc(75% - 16px);
  }
}

@media (min-width:752px) {
  .c4 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    width: calc(75% - 24px);
  }
}

@media (min-width:1008px) {
  .c4 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(83.33333% - 24px);
  }
}

@media (min-width:1232px) {
  .c4 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(83.33333% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@media (min-width:512px) {
  .c1 {
    padding: 0 24px;
  }
}

@media (min-width:752px) {
  .c1 {
    padding: 0 32px;
  }
}

@media (min-width:1008px) {
  .c1 {
    padding: 0 48px;
  }
}

@media (min-width:1232px) {
  .c1 {
    padding: 0 64px;
  }
}

@supports (display:grid) {
  .c2 {
    display: grid;
    grid-gap: 16px;
    grid-template-columns: repeat(4,minmax(0,1fr));
  }
}

@media (min-width:512px) {

}

@media (min-width:752px) {

}

@media (min-width:1008px) {

}

@media (min-width:1232px) {

}

@media (min-width:752px) {
  .c8 {
    height: 40px;
  }
}

@media (max-width:752px) {
  .c11 {
    -webkit-flex-basis: 0%;
    -ms-flex-preferred-size: 0%;
    flex-basis: 0%;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
    width: 100%;
  }
}

@media (min-width:752px) {
  .c16 {
    padding-bottom: 40px;
  }
}

@media (max-width:752px) {
  .c22 {
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
  }
}

@media (min-width:752px) {
  .c22 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:752px) {
  .c23 {
    width: 100%;
    margin: 0;
  }
}

@media (min-width:752px) {
  .c23 {
    -webkit-transform: translateY(2.5rem) scaleX(6);
    -ms-transform: translateY(2.5rem) scaleX(6);
    transform: translateY(2.5rem) scaleX(6);
  }
}

@media (min-width:1008px) {
  .c23 {
    -webkit-transform: translateY(2.5rem) scaleX(5);
    -ms-transform: translateY(2.5rem) scaleX(5);
    transform: translateY(2.5rem) scaleX(5);
  }
}

@media (min-width:1232px) {
  .c23 {
    -webkit-transform: translateY(2.5rem) scaleX(4);
    -ms-transform: translateY(2.5rem) scaleX(4);
    transform: translateY(2.5rem) scaleX(4);
  }
}

@media (min-width:752px) {
  .c0:before {
    width: 55rem;
    height: 55rem;
    -webkit-transform: translate(-43rem,1rem) rotate(-45deg);
    -ms-transform: translate(-43rem,1rem) rotate(-45deg);
    transform: translate(-43rem,1rem) rotate(-45deg);
  }
}

@media (min-width:1008px) {
  .c0:before {
    -webkit-transform: translate(-47rem,-1rem) rotate(-45deg);
    -ms-transform: translate(-47rem,-1rem) rotate(-45deg);
    transform: translate(-47rem,-1rem) rotate(-45deg);
  }
}

@media (min-width:1232px) {
  .c0:before {
    -webkit-transform: translate(-55rem,-1rem) rotate(-45deg);
    -ms-transform: translate(-55rem,-1rem) rotate(-45deg);
    transform: translate(-55rem,-1rem) rotate(-45deg);
  }
}

@media (min-width:752px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<section
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <h2
            aria-label="Town Musicians of Bremen."
            className="c6"
            color="white"
            fontFamily="default"
            fontSize="xxl"
            spacing="base"
          >
            Town Musicians of Bremen.
          </h2>
          <p
            className="c7"
            color="white"
            fontSize="sm"
          >
            In the story, a donkey, a dog, a cat, and a rooster leave their homes and set out together.
          </p>
          <div
            className="c8"
            direction="horizontal"
            size="xl"
          />
          <div
            className="c9 c10"
            display="flex"
          >
            <div
              className="c11"
            >
              <div
                className="c12"
                color="white"
              >
                <div
                  className="c13"
                  color="white"
                >
                  <span
                    className="c14 c15"
                    color="white"
                    fontFamily="featured"
                    fontSize="xl"
                    spacing="base"
                  >
                    01
                  </span>
                </div>
              </div>
              <div
                className="c16"
              >
                <p
                  className="c17"
                  color="white"
                  fontSize="md"
                >
                  they see a lighted cottage...
                </p>
                <a
                  className="c18"
                  color="white"
                  href="https://en.wikipedia.org/wiki/Bremen"
                  target="_self"
                >
                  <span
                    className="c19"
                    color="white"
                  >
                    <div
                      className="c12"
                      color="white"
                    >
                      <svg
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                        />
                      </svg>
                    </div>
                  </span>
                  <span
                    className="c20 c21"
                    color="white"
                    fontSize="xs"
                  >
                    On the way to Bremen
                  </span>
                </a>
              </div>
            </div>
            <div
              className="c22"
            >
              <div
                className="c23"
                color="white"
              />
            </div>
            <div
              className="c11"
            >
              <div
                className="c12"
                color="white"
              >
                <div
                  className="c13"
                  color="white"
                >
                  <span
                    className="c14 c15"
                    color="white"
                    fontFamily="featured"
                    fontSize="xl"
                    spacing="base"
                  >
                    02
                  </span>
                </div>
              </div>
              <div
                className="c16"
              >
                <p
                  className="c17"
                  color="white"
                  fontSize="md"
                >
                  they look inside and see four robbers
                </p>
                <a
                  className="c18"
                  color="white"
                  href="https://en.wikipedia.org/wiki/Bremen"
                  target="_self"
                >
                  <span
                    className="c19"
                    color="white"
                  >
                    <div
                      className="c12"
                      color="white"
                    >
                      <svg
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                        />
                      </svg>
                    </div>
                  </span>
                  <span
                    className="c20 c21"
                    color="white"
                    fontSize="xs"
                  >
                    Enjoying their ill-gotten gains
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`StepByStepSection renders correctly with different style options renders correctly with Saturn grey styling 1`] = `
.c6 {
  margin: 0;
  color: #000;
  font-size: 32px;
  line-height: 28px;
  font-family: Raleway,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

.c7 {
  color: #000;
  font-size: 16px;
  line-height: 24px;
  font-family: Raleway,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c14 {
  margin: 0;
  color: #000;
  font-size: 26px;
  line-height: 28px;
  font-family: RalewayBlack,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

.c17 {
  color: #000;
  font-size: 18px;
  line-height: 28px;
  font-family: Raleway,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  overflow: hidden;
  max-height: calc(28px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c20 {
  color: #000;
  font-size: 14px;
  line-height: 20px;
  font-family: Raleway,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 svg {
  width: 25px;
  height: 25px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #000;
}

.c12 svg g,
.c12 svg p {
  fill: #000;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  display: none;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  width: calc(100% - 16px);
}

.c1 {
  box-sizing: border-box;
  margin: 0 auto;
  max-width: 1472px;
  padding: 0 16px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  margin: 0;
  margin-bottom: 0;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #000;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c18::after {
  content: '';
  position: absolute;
  display: none;
  bottom: -2px;
  height: 1px;
  background-color: #000;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c18:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c19 {
  margin-left: 0px;
  margin-right: 4px;
}

.c19 svg {
  height: 16px;
  width: 16px;
}

.c21 {
  display: block;
  color: #000;
}

.c8 {
  display: block;
  width: 100%;
  height: 32px;
}

.c13 {
  width: 4rem;
  height: 4rem;
  line-height: 4rem;
  border-radius: 0;
  border: 2px solid black;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  text-align: center;
}

.c15 {
  display: inline-block;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  vertical-align: -0.1rem;
  margin-left: 0.2rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 350px;
  -webkit-flex-basis: 47.5%;
  -ms-flex-preferred-size: 47.5%;
  flex-basis: 47.5%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  width: 95%;
  max-width: 25rem;
  padding-top: 8px;
  padding-bottom: 24px;
}

.c16 p {
  margin-bottom: 0;
  width: 100%;
}

.c16 a {
  margin-top: 8px;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 350px;
  -webkit-flex-basis: 5%;
  -ms-flex-preferred-size: 5%;
  flex-basis: 5%;
}

.c23 {
  width: 4rem;
  height: 4rem;
  margin: 0 auto 40px auto;
  -webkit-transform: translateX(-2rem) rotate(90deg);
  -ms-transform: translateX(-2rem) rotate(90deg);
  transform: translateX(-2rem) rotate(90deg);
  border-top: 1px solid black;
}

.c0 {
  position: relative;
  overflow: hidden;
  background-color: #C9CCCD;
  margin: 56px 0;
}

.c0:before {
  content: '';
  display: block;
  position: absolute;
  width: 40rem;
  height: 40rem;
  top: 0;
  left: 50%;
  background: rgba(255,255,255,0.3);
  border-radius: 0;
  -webkit-transform: translate(-20rem,-0.5rem) rotate(-45deg);
  -ms-transform: translate(-20rem,-0.5rem) rotate(-45deg);
  transform: translate(-20rem,-0.5rem) rotate(-45deg);
}

.c5 {
  position: relative;
  padding: 56px 0;
}

.c10 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

@supports (display:grid) {
  .c3 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c3 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    width: calc(12.5% - 16px);
  }
}

@media (min-width:752px) {
  .c3 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    width: calc(12.5% - 24px);
  }
}

@media (min-width:1008px) {
  .c3 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(8.33333% - 24px);
  }
}

@media (min-width:1232px) {
  .c3 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(8.33333% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@supports (display:grid) {
  .c4 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@supports (display:grid) {
  .c4 {
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c4 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    width: calc(75% - 16px);
  }
}

@media (min-width:752px) {
  .c4 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    width: calc(75% - 24px);
  }
}

@media (min-width:1008px) {
  .c4 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(83.33333% - 24px);
  }
}

@media (min-width:1232px) {
  .c4 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(83.33333% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@media (min-width:512px) {
  .c1 {
    padding: 0 24px;
  }
}

@media (min-width:752px) {
  .c1 {
    padding: 0 32px;
  }
}

@media (min-width:1008px) {
  .c1 {
    padding: 0 48px;
  }
}

@media (min-width:1232px) {
  .c1 {
    padding: 0 64px;
  }
}

@supports (display:grid) {
  .c2 {
    display: grid;
    grid-gap: 16px;
    grid-template-columns: repeat(4,minmax(0,1fr));
  }
}

@media (min-width:512px) {

}

@media (min-width:752px) {

}

@media (min-width:1008px) {

}

@media (min-width:1232px) {

}

@media (min-width:752px) {
  .c8 {
    height: 40px;
  }
}

@media (max-width:752px) {
  .c11 {
    -webkit-flex-basis: 0%;
    -ms-flex-preferred-size: 0%;
    flex-basis: 0%;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
    width: 100%;
  }
}

@media (min-width:752px) {
  .c16 {
    padding-bottom: 40px;
  }
}

@media (max-width:752px) {
  .c22 {
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
  }
}

@media (min-width:752px) {
  .c22 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:752px) {
  .c23 {
    width: 100%;
    margin: 0;
  }
}

@media (min-width:752px) {
  .c23 {
    -webkit-transform: translateY(2.1rem) scaleX(6);
    -ms-transform: translateY(2.1rem) scaleX(6);
    transform: translateY(2.1rem) scaleX(6);
  }
}

@media (min-width:1008px) {
  .c23 {
    -webkit-transform: translateY(2.1rem) scaleX(5);
    -ms-transform: translateY(2.1rem) scaleX(5);
    transform: translateY(2.1rem) scaleX(5);
  }
}

@media (min-width:1232px) {
  .c23 {
    -webkit-transform: translateY(2.1rem) scaleX(4);
    -ms-transform: translateY(2.1rem) scaleX(4);
    transform: translateY(2.1rem) scaleX(4);
  }
}

@media (min-width:752px) {

}

@media (min-width:752px) {

}

@media (min-width:1008px) {

}

@media (min-width:1232px) {

}

@media (min-width:752px) {
  .c0:before {
    width: 55rem;
    height: 55rem;
    -webkit-transform: translate(-43rem,1rem) rotate(-45deg);
    -ms-transform: translate(-43rem,1rem) rotate(-45deg);
    transform: translate(-43rem,1rem) rotate(-45deg);
  }
}

@media (min-width:1008px) {
  .c0:before {
    -webkit-transform: translate(-47rem,-1rem) rotate(-45deg);
    -ms-transform: translate(-47rem,-1rem) rotate(-45deg);
    transform: translate(-47rem,-1rem) rotate(-45deg);
  }
}

@media (min-width:1232px) {
  .c0:before {
    -webkit-transform: translate(-55rem,-1rem) rotate(-45deg);
    -ms-transform: translate(-55rem,-1rem) rotate(-45deg);
    transform: translate(-55rem,-1rem) rotate(-45deg);
  }
}

@media (min-width:752px) {

}

@media (min-width:1008px) {

}

@media (min-width:1232px) {

}

@media (min-width:752px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<section
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <h2
            aria-label="Town Musicians of Bremen."
            className="c6"
            color="black"
            fontFamily="default"
            fontSize="xxl"
            spacing="base"
          >
            Town Musicians of Bremen.
          </h2>
          <p
            className="c7"
            color="black"
            fontSize="sm"
          >
            In the story, a donkey, a dog, a cat, and a rooster leave their homes and set out together.
          </p>
          <div
            className="c8"
            direction="horizontal"
            size="xl"
          />
          <div
            className="c9 c10"
            display="flex"
          >
            <div
              className="c11"
            >
              <div
                className="c12"
                color="black"
              >
                <div
                  className="c13"
                  color="black"
                >
                  <span
                    className="c14 c15"
                    color="black"
                    fontFamily="featured"
                    fontSize="xl"
                    spacing="base"
                  >
                    01
                  </span>
                </div>
              </div>
              <div
                className="c16"
              >
                <p
                  className="c17"
                  color="black"
                  fontSize="md"
                >
                  they see a lighted cottage...
                </p>
                <a
                  className="c18"
                  color="black"
                  href="https://en.wikipedia.org/wiki/Bremen"
                  target="_self"
                >
                  <span
                    className="c19"
                    color="black"
                  >
                    <div
                      className="c12"
                      color="black"
                    >
                      <svg
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                        />
                      </svg>
                    </div>
                  </span>
                  <span
                    className="c20 c21"
                    color="black"
                    fontSize="xs"
                  >
                    On the way to Bremen
                  </span>
                </a>
              </div>
            </div>
            <div
              className="c22"
            >
              <div
                className="c23"
                color="black"
              />
            </div>
            <div
              className="c11"
            >
              <div
                className="c12"
                color="black"
              >
                <div
                  className="c13"
                  color="black"
                >
                  <span
                    className="c14 c15"
                    color="black"
                    fontFamily="featured"
                    fontSize="xl"
                    spacing="base"
                  >
                    02
                  </span>
                </div>
              </div>
              <div
                className="c16"
              >
                <p
                  className="c17"
                  color="black"
                  fontSize="md"
                >
                  they look inside and see four robbers
                </p>
                <a
                  className="c18"
                  color="black"
                  href="https://en.wikipedia.org/wiki/Bremen"
                  target="_self"
                >
                  <span
                    className="c19"
                    color="black"
                  >
                    <div
                      className="c12"
                      color="black"
                    >
                      <svg
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                        />
                      </svg>
                    </div>
                  </span>
                  <span
                    className="c20 c21"
                    color="black"
                    fontSize="xs"
                  >
                    Enjoying their ill-gotten gains
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`StepByStepSection renders correctly with different style options renders correctly with Saturn primary styling 1`] = `
.c6 {
  margin: 0;
  color: #fff;
  font-size: 32px;
  line-height: 28px;
  font-family: Raleway,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

.c7 {
  color: #fff;
  font-size: 16px;
  line-height: 24px;
  font-family: Raleway,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c14 {
  margin: 0;
  color: #fff;
  font-size: 26px;
  line-height: 28px;
  font-family: RalewayBlack,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
}

.c17 {
  color: #fff;
  font-size: 18px;
  line-height: 28px;
  font-family: Raleway,Arial,sans-serif;
  font-weight: 700;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  overflow: hidden;
  max-height: calc(28px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c20 {
  color: #fff;
  font-size: 14px;
  line-height: 20px;
  font-family: Raleway,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 svg {
  width: 25px;
  height: 25px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #fff;
}

.c12 svg g,
.c12 svg p {
  fill: #fff;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  display: none;
}

.c4 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  width: calc(100% - 16px);
}

.c1 {
  box-sizing: border-box;
  margin: 0 auto;
  max-width: 1472px;
  padding: 0 16px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  margin: 0;
  margin-bottom: 0;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #fff;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c18::after {
  content: '';
  position: absolute;
  display: none;
  bottom: -2px;
  height: 1px;
  background-color: #fff;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c18:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c19 {
  margin-left: 0px;
  margin-right: 4px;
}

.c19 svg {
  height: 16px;
  width: 16px;
}

.c21 {
  display: block;
  color: #fff;
}

.c8 {
  display: block;
  width: 100%;
  height: 32px;
}

.c13 {
  width: 4rem;
  height: 4rem;
  line-height: 4rem;
  border-radius: 0;
  border: 2px solid white;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  text-align: center;
}

.c15 {
  display: inline-block;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  vertical-align: -0.1rem;
  margin-left: 0.2rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 350px;
  -webkit-flex-basis: 47.5%;
  -ms-flex-preferred-size: 47.5%;
  flex-basis: 47.5%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  width: 95%;
  max-width: 25rem;
  padding-top: 8px;
  padding-bottom: 24px;
}

.c16 p {
  margin-bottom: 0;
  width: 100%;
}

.c16 a {
  margin-top: 8px;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 350px;
  -webkit-flex-basis: 5%;
  -ms-flex-preferred-size: 5%;
  flex-basis: 5%;
}

.c23 {
  width: 4rem;
  height: 4rem;
  margin: 0 auto 40px auto;
  -webkit-transform: translateX(-2rem) rotate(90deg);
  -ms-transform: translateX(-2rem) rotate(90deg);
  transform: translateX(-2rem) rotate(90deg);
  border-top: 1px solid white;
}

.c0 {
  position: relative;
  overflow: hidden;
  background-color: #EF7C00;
  margin: 56px 0;
}

.c0:before {
  content: '';
  display: block;
  position: absolute;
  width: 40rem;
  height: 40rem;
  top: 0;
  left: 50%;
  background: rgba(0,0,0,0.1);
  border-radius: 0;
  -webkit-transform: translate(-20rem,-0.5rem) rotate(-45deg);
  -ms-transform: translate(-20rem,-0.5rem) rotate(-45deg);
  transform: translate(-20rem,-0.5rem) rotate(-45deg);
}

.c5 {
  position: relative;
  padding: 56px 0;
}

.c10 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

@supports (display:grid) {
  .c3 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c3 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    width: calc(12.5% - 16px);
  }
}

@media (min-width:752px) {
  .c3 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    width: calc(12.5% - 24px);
  }
}

@media (min-width:1008px) {
  .c3 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(8.33333% - 24px);
  }
}

@media (min-width:1232px) {
  .c3 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(8.33333% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@supports (display:grid) {
  .c4 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@supports (display:grid) {
  .c4 {
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c4 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    width: calc(75% - 16px);
  }
}

@media (min-width:752px) {
  .c4 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    width: calc(75% - 24px);
  }
}

@media (min-width:1008px) {
  .c4 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(83.33333% - 24px);
  }
}

@media (min-width:1232px) {
  .c4 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(83.33333% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@media (min-width:512px) {
  .c1 {
    padding: 0 24px;
  }
}

@media (min-width:752px) {
  .c1 {
    padding: 0 32px;
  }
}

@media (min-width:1008px) {
  .c1 {
    padding: 0 48px;
  }
}

@media (min-width:1232px) {
  .c1 {
    padding: 0 64px;
  }
}

@supports (display:grid) {
  .c2 {
    display: grid;
    grid-gap: 16px;
    grid-template-columns: repeat(4,minmax(0,1fr));
  }
}

@media (min-width:512px) {

}

@media (min-width:752px) {

}

@media (min-width:1008px) {

}

@media (min-width:1232px) {

}

@media (min-width:752px) {
  .c8 {
    height: 40px;
  }
}

@media (max-width:752px) {
  .c11 {
    -webkit-flex-basis: 0%;
    -ms-flex-preferred-size: 0%;
    flex-basis: 0%;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
    width: 100%;
  }
}

@media (min-width:752px) {
  .c16 {
    padding-bottom: 40px;
  }
}

@media (max-width:752px) {
  .c22 {
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
  }
}

@media (min-width:752px) {
  .c22 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:752px) {
  .c23 {
    width: 100%;
    margin: 0;
  }
}

@media (min-width:752px) {
  .c23 {
    -webkit-transform: translateY(2.1rem) scaleX(6);
    -ms-transform: translateY(2.1rem) scaleX(6);
    transform: translateY(2.1rem) scaleX(6);
  }
}

@media (min-width:1008px) {
  .c23 {
    -webkit-transform: translateY(2.1rem) scaleX(5);
    -ms-transform: translateY(2.1rem) scaleX(5);
    transform: translateY(2.1rem) scaleX(5);
  }
}

@media (min-width:1232px) {
  .c23 {
    -webkit-transform: translateY(2.1rem) scaleX(4);
    -ms-transform: translateY(2.1rem) scaleX(4);
    transform: translateY(2.1rem) scaleX(4);
  }
}

@media (min-width:752px) {
  .c0:before {
    width: 55rem;
    height: 55rem;
    -webkit-transform: translate(-43rem,1rem) rotate(-45deg);
    -ms-transform: translate(-43rem,1rem) rotate(-45deg);
    transform: translate(-43rem,1rem) rotate(-45deg);
  }
}

@media (min-width:1008px) {
  .c0:before {
    -webkit-transform: translate(-47rem,-1rem) rotate(-45deg);
    -ms-transform: translate(-47rem,-1rem) rotate(-45deg);
    transform: translate(-47rem,-1rem) rotate(-45deg);
  }
}

@media (min-width:1232px) {
  .c0:before {
    -webkit-transform: translate(-55rem,-1rem) rotate(-45deg);
    -ms-transform: translate(-55rem,-1rem) rotate(-45deg);
    transform: translate(-55rem,-1rem) rotate(-45deg);
  }
}

@media (min-width:752px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<section
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      />
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <h2
            aria-label="Town Musicians of Bremen."
            className="c6"
            color="white"
            fontFamily="default"
            fontSize="xxl"
            spacing="base"
          >
            Town Musicians of Bremen.
          </h2>
          <p
            className="c7"
            color="white"
            fontSize="sm"
          >
            In the story, a donkey, a dog, a cat, and a rooster leave their homes and set out together.
          </p>
          <div
            className="c8"
            direction="horizontal"
            size="xl"
          />
          <div
            className="c9 c10"
            display="flex"
          >
            <div
              className="c11"
            >
              <div
                className="c12"
                color="white"
              >
                <div
                  className="c13"
                  color="white"
                >
                  <span
                    className="c14 c15"
                    color="white"
                    fontFamily="featured"
                    fontSize="xl"
                    spacing="base"
                  >
                    01
                  </span>
                </div>
              </div>
              <div
                className="c16"
              >
                <p
                  className="c17"
                  color="white"
                  fontSize="md"
                >
                  they see a lighted cottage...
                </p>
                <a
                  className="c18"
                  color="white"
                  href="https://en.wikipedia.org/wiki/Bremen"
                  target="_self"
                >
                  <span
                    className="c19"
                    color="white"
                  >
                    <div
                      className="c12"
                      color="white"
                    >
                      <svg
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                        />
                      </svg>
                    </div>
                  </span>
                  <span
                    className="c20 c21"
                    color="white"
                    fontSize="xs"
                  >
                    On the way to Bremen
                  </span>
                </a>
              </div>
            </div>
            <div
              className="c22"
            >
              <div
                className="c23"
                color="white"
              />
            </div>
            <div
              className="c11"
            >
              <div
                className="c12"
                color="white"
              >
                <div
                  className="c13"
                  color="white"
                >
                  <span
                    className="c14 c15"
                    color="white"
                    fontFamily="featured"
                    fontSize="xl"
                    spacing="base"
                  >
                    02
                  </span>
                </div>
              </div>
              <div
                className="c16"
              >
                <p
                  className="c17"
                  color="white"
                  fontSize="md"
                >
                  they look inside and see four robbers
                </p>
                <a
                  className="c18"
                  color="white"
                  href="https://en.wikipedia.org/wiki/Bremen"
                  target="_self"
                >
                  <span
                    className="c19"
                    color="white"
                  >
                    <div
                      className="c12"
                      color="white"
                    >
                      <svg
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.78 11.28a.75.75 0 01.22.53v.38a.77.77 0 01-.22.53l-5.14 5.13a.5.5 0 01-.71 0l-.71-.71a.49.49 0 010-.7L13.67 12 9.22 7.56a.5.5 0 010-.71l.71-.7a.5.5 0 01.71 0z"
                        />
                      </svg>
                    </div>
                  </span>
                  <span
                    className="c20 c21"
                    color="white"
                    fontSize="xs"
                  >
                    Enjoying their ill-gotten gains
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;
